Added Bamboo deployment and parameterized rule loading

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,3 +13,6 @@ spring:
 watcher:
   interval: "*/10 * * * * *"
   eventStoreUrls: local:events.json
+
+plan:
+  path: classpath:TestPlans/testPlan.json
